--- a/index.htm
+++ b/index.htm
@@ -43,13 +43,19 @@
 
             <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
 
-            <p>משתמש בפורום תחומים בשם פישל, נרתם לתרגם את זום, לטובת המשתמשים שאינם מסתדרים עם השפה באנגלית.</p>
+            <p>משתמש בפורום תחומים בשם <a href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
+                המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
+
+            <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
+                הקובץ.</p>
         </div>
 
         <div class="el text-center">
-            <button class="btn btn-dark btn-lg">
-                להורדת זום בעברית עבור ווינדוס
-            </button>
+            <a href="./Zoom Video 5.4.1 By Fishel & Yossi Zahn.rar">
+                <button class="btn btn-dark btn-lg">
+                    להורדת זום בעברית עבור ווינדוס
+                </button>
+            </a>
         </div>
     </div>
 
