--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="description" content="הורדת תוכנת זום מתורגמת לעברית">
 
+    <meta name="keywords" content="">
+
+    <title>זום בעברית</title>
+    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
@@ -56,6 +61,7 @@
                     להורדת זום בעברית עבור ווינדוס
                 </button>
             </a>
+            <p>סיסמא: פישל</p>
         </div>
 
         <a href="https://tchumim.com/post/114651">מקור</a>
