--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="הורדת תוכנת זום מתורגמת לעברית">
 
-    <meta name="keywords" content="">
+    <meta name="keywords" content="זום בעברית, זום">
 
     <title>זום בעברית</title>
     
