--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,8 @@
 
     <meta name="keywords" content="זום בעברית, זום">
 
+    <meta name="google-site-verification" content="4uPrFFuNHwZI4dATq8yKPHeXNSzX_Yp6qrl5U-IRPvs" />
+
     <title>זום בעברית</title>
     
     <!-- Latest compiled and minified CSS -->
