--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                 המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
             <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
-                הקובץ.</p>
+                הקובץ. וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
         </div>
 
         <div class="el text-center">
@@ -69,9 +69,7 @@
 
         <a href="https://tchumim.com/post/114651">מקור</a>
     </div>
-
-
-
+    
 </body>
 
 </html>
