--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,9 @@
         .el {
             margin: 3em 0;
         }
+        .container {
+            background: #e9ecef;
+        }
     </style>
 
 </head>
@@ -40,7 +43,7 @@
 
     <div class="container">
         <div class="el jumbotron">
-            <h2 class="text-center main-cop">זום בעברית</h2>
+            <h2 class="text-center display-4 main-cop">זום בעברית</h2>
         </div>
 
         <div class="el text-center">
@@ -54,12 +57,12 @@
                 המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
             <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
-                הקובץ. וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
+                הקובץ, וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
         </div>
 
         <div class="el text-center">
             <a href="./Zoom Video 5.4.1 By Fishel & Yossi Zahn.rar">
-                <button class="btn btn-dark btn-lg">
+                <button class="btn btn-primary btn-lg">
                     להורדת זום בעברית עבור ווינדוס
                 </button>
             </a>
