--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
             <p>v1.0.1</p>
         </div>
 
-        <a href="https://tchumim.com/post/114651">מקור</a>
+        <a class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
     </div>
     
 </body>
