--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <meta name="google-site-verification" content="4uPrFFuNHwZI4dATq8yKPHeXNSzX_Yp6qrl5U-IRPvs" />
 
     <title>זום בעברית</title>
-    
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
@@ -22,18 +22,15 @@
         crossorigin="anonymous"></script>
 
     <style>
-        .main-cop {
-            /*             background-color: aqua;
-            width: 68%;
-            margin: 2em auto;
-            padding: 1em; */
-        }
-
         .el {
             margin: 3em 0;
         }
-        .container {
+
+        .txt {
             background: #e9ecef;
+            padding: 1em;
+            border-radius: 1em;
+            margin: 2em;
         }
     </style>
 
@@ -42,37 +39,40 @@
 <body>
 
     <div class="container">
-        <div class="el jumbotron">
+        <div class="txt">
             <h2 class="text-center display-4 main-cop">זום בעברית</h2>
         </div>
+        <div class="txt">
+            <div class="el text-center">
+                <p>
+                    מתחילת הזמן המוזר בו אנחנו נמצאים, תוכנת זום תפסה תאוצה ניכרת.
+                </p>
 
-        <div class="el text-center">
-            <p>
-                מתחילת הזמן המוזר בו אנחנו נמצאים, תוכנת זום תפסה תאוצה ניכרת.
-            </p>
+                <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
 
-            <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
+                <p>משתמש בפורום תחומים בשם <a href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
+                    המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
-            <p>משתמש בפורום תחומים בשם <a href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
-                המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
+                <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
+                    הקובץ, וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
+            </div>
 
-            <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
-                הקובץ, וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
+            <div class="text-center">
+                <a href="./Zoom Video 5.4.1 By Fishel & Yossi Zahn.rar">
+                    <button class="btn btn-primary btn-lg">
+                        להורדת זום בעברית עבור ווינדוס
+                    </button>
+                </a>
+                <p>סיסמא: פישל</p>
+                <p>v1.0.1</p>
+            </div>
         </div>
 
-        <div class="el text-center">
-            <a href="./Zoom Video 5.4.1 By Fishel & Yossi Zahn.rar">
-                <button class="btn btn-primary btn-lg">
-                    להורדת זום בעברית עבור ווינדוס
-                </button>
-            </a>
-            <p>סיסמא: פישל</p>
-            <p>v1.0.1</p>
+        <div>
+            <a class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
         </div>
-
-        <a class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
     </div>
-    
+
 </body>
 
 </html>
