--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html dir="rtl">
 
 <head>
+    <!-- by musicode7 and men770 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="הורדת תוכנת זום מתורגמת לעברית">
@@ -17,9 +18,9 @@
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js"
+    <!-- <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js"
         integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
     <style>
         .el {
@@ -27,10 +28,16 @@
         }
 
         .txt {
-            background: #e9ecef;
+            background: #dbdbdb;
             padding: 1em;
             border-radius: 1em;
             margin: 2em;
+            border: 1px solid #dbdbdb;
+        }
+
+        .txt:hover {
+            border: 1px solid #000000;
+            background: #e7e7e7;
         }
     </style>
 
@@ -69,7 +76,7 @@
         </div>
 
         <div>
-            <a class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
+            <a target="_blank" class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
         </div>
     </div>
 
