עוד שינוי עיצוב

--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,13 @@
             border: 1px solid #000000;
             background: #e7e7e7;
         }
+
+        a:hover {
+            border-radius: .3rem;
+            color: #ffffff;
+            background-color: #007bff;
+            text-decoration: none;
+        }
     </style>
 
 </head>
@@ -57,11 +64,11 @@
 
                 <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
 
-                <p>משתמש בפורום תחומים בשם <a href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
+                <p>משתמש בפורום תחומים בשם <a target="_blank" href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
                     המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
-                <p>יש לציין את המשתמש <a href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
-                    הקובץ, וכן את המשתמש <a href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
+                <p>יש לציין את המשתמש <a target="_blank" href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
+                    הקובץ, וכן את המשתמש <a target="_blank" href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
             </div>
 
             <div class="text-center">
@@ -76,7 +83,8 @@
         </div>
 
         <div>
-            <a target="_blank" class="btn btn-outline-secondary float-right" href="https://tchumim.com/post/114651">מקור</a>
+            <a target="_blank" class="btn btn-outline-secondary float-right"
+                href="https://tchumim.com/post/114651">מקור</a>
         </div>
     </div>
 
