--- a/index.htm
+++ b/index.htm
@@ -32,11 +32,11 @@
             padding: 1em;
             border-radius: 1em;
             margin: 2em;
-            border: 1px solid #dbdbdb;
+            border: .3em solid #dbdbdb;
         }
 
         .txt:hover {
-            border: 1px solid #000000;
+            border: .3em solid #dbdbdb;
             background: #e7e7e7;
         }
 
