--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,15 @@
     <!-- <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js"
         integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k"
         crossorigin="anonymous"></script> -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RCQZMT21QJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-RCQZMT21QJ');
+    </script>
 
     <style>
         .el {
@@ -64,11 +73,14 @@
 
                 <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
 
-                <p>משתמש בפורום תחומים בשם <a target="_blank" href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם את זום, לטובת
+                <p>משתמש בפורום תחומים בשם <a target="_blank" href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם
+                    את זום, לטובת
                     המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
-                <p>יש לציין את המשתמש <a target="_blank" href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו בהליך הטכני של סגירת
-                    הקובץ, וכן את המשתמש <a target="_blank" href="https://tchumim.com/user/a0533057932">A0533057932</a> שסייע.</p>
+                <p>יש לציין את המשתמש <a target="_blank" href="https://tchumim.com/user/yossiz">yossiz</a> שסייע לו
+                    בהליך הטכני של סגירת
+                    הקובץ, וכן את המשתמש <a target="_blank" href="https://tchumim.com/user/a0533057932">A0533057932</a>
+                    שסייע.</p>
             </div>
 
             <div class="text-center">
