קישור לשרשור בתחומים

--- a/index.htm
+++ b/index.htm
@@ -68,12 +68,12 @@
         <div class="txt">
             <div class="el text-center">
                 <p>
-                    מתחילת הזמן המוזר בו אנחנו נמצאים, תוכנת זום תפסה תאוצה ניכרת.
+                    מתחילת הזמן המוזר בו אנחנו נמצאים, תוכנת זום תפסה תאוצה ניכרת. הלימודים בבית הספר ובמכללות, פגישות
+                    עסקיות ואפילו חתונות, הכל נעשה בזום. רק שבשונה מרוב השירותים הפופולריים ברשת כמו גוגל פייסבוק או
+                    ווינדוס, לזום אין בכלל תמיכה בעברית.
                 </p>
 
-                <p>רק שבשונה מרוב השירותים הפופולאריים כמו גוגל פייסבוק או וונדוס, לזום אין בכלל תמיכה בעברית.</p>
-
-                <p>משתמש בפורום תחומים בשם <a target="_blank" href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם
+                <p>משתמש בפורום <a target="_blank" href="https://tchumim.com/">תחומים</a> בשם <a target="_blank" href="https://tchumim.com/uid/2067">פישל</a>, נרתם לתרגם
                     את זום, לטובת
                     המשתמשים שאינם מסתדרים עם הממשק באנגלית.</p>
 
@@ -85,12 +85,18 @@
 
             <div class="text-center">
                 <a href="./Zoom Video 5.4.1 By Fishel & Yossi Zahn.rar">
-                    <button class="btn btn-primary btn-lg">
+                    <button class="btn btn-block btn-lg btn-primary">
                         להורדת זום בעברית עבור ווינדוס
                     </button>
                 </a>
                 <p>סיסמא: פישל</p>
                 <p>v1.0.1</p>
+
+                <a href="https://tchumim.com/topic/10452">
+                    <button class="btn btn-block btn-primary btn-sm">
+                        לתמיכה בפורום
+                    </button>
+                </a>
             </div>
         </div>
 
